notebook-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notebook-backend
  namespace: notebook-app

spec:
  replicas: 5

  selector:
    matchLabels:
      app: notebook-backend

  template:
    metadata:
      labels:
        app: notebook-backend

    spec:
      containers:

        - name: notebook-backend

          image: notebook-hub:v1

          imagePullPolicy: Never

          ports:
            - containerPort: 9092
