notebook-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notebook-backend-service
  namespace: notebook-app

spec:
  selector:
    app: notebook-backend

  ports:
    - port: 9092
      targetPort: 9092

  type: NodePort
