ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook-app-ingress
  namespace: notebook-app
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notebook-backend-service
                port:
                  number: 9092
